<resources>
    <string name="app_name">BeMyPlan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_introduce">내 취향에 맞는\n여행 일정을 찾아보세요</string>
    <string name="home_recent_title">최신 등록 여행 일정</string>
    <string name="home_editor_suggest_title">비마플 추천 여행 일정</string>

    <string name="location_title">어디로 떠나세요?</string>
    <string name="charging_title">결제</string>
    <string name="charging_cost_title">결제 금액</string>
    <string name="charging_charging_way">결제 수단</string>
    <string name="charging_kakaopay">카카오페이</string>
    <string name="charging_toss">토스</string>
    <string name="charging_naverpay">네이버페이</string>
    <string name="charging_charge">결제하기</string>
    <string name="charging_completed">결제가 완료되었습니다!</string>
    <string name="charging_goto_content">콘텐츠 보러가기</string>
    <string name="charging_popup_1"><b>"앱 출시 기념 0원 이벤트"</b>" 중입니다."</string>
    <string name="charging_popup_2">무료로 여행 일정을 확인해보세요!</string>

    <string name="onboarding_search_plan">여행 취향이 비슷한 크리에이터의\n여행 일정을 찾아보세요.</string>
    <string name="onboarding_check_preview">미리보기로 원하는\n여행인지 확인하세요.</string>
    <string name="onboarding_buy_plan">여행 일정을 구매하여\n알찬 여행 정보를 만나보세요.</string>

    <string name="title_purchase_benefit">여행 일정을 구매하시면\n이런 내용을 볼 수 있어요!</string>
    <string name="body_purchase_benefit">✔️ 장소를 핀한 지도\n✔️ 정류장 형식 일정\n✔️ 솔직 후기\n✔️ 가본 사람만 알 수 있는 꿀팁\n✔️ 다음 장소로 이동할 때의 교통편</string>
    <string name="text_purchase">구매하기</string>
    <string name="text_bottom_sheet_dialog_sort">정렬</string>
    <string name="menu_title_home">홈</string>
    <string name="menu_title_location">여행지</string>
    <string name="menu_title_scrap">스크랩</string>
    <string name="menu_title_myplan">마이플랜</string>
    <string name="text_scrap_empty">아직 스크랩한 여행 일정이 없어요</string>
    <string name="text_recommend">이런 여행 일정은 어떠세요?</string>
    <string name="text_guest_mode"><u>둘러보기</u></string>
    <string name="text_google_login">Google 계정으로 로그인</string>
    <string name="text_kakao_login">카카오 로그인</string>
    <string name="text_sign_up_nickname_title">닉네임을 알려주세요.</string>
    <string name="text_sign_up_nickname_description">설정된 닉네임은 수정이 불가합니다.</string>
    <string name="text_sign_up_email_title">이메일을 알려주세요.</string>
    <string name="text_sign_up_email_description">설정된 이메일은 수정이 불가합니다.</string>
    <string name="text_all_agree">약관 전체 동의</string>
    <string name="text_essential">[필수]</string>
    <string name="text_agree_terms">이용약관 동의</string>
    <string name="text_agree_info">개인정보 수집 이용 동의</string>
    <string name="text_nickname_hint">특수문자는 사용할 수 없습니다</string>
    <string name="text_email_hint">이메일 입력</string>
    <string name="text_start">시작하기</string>
    <string name="text_next">다음</string>
    <string name="text_no">취소</string>
    <string name="text_yes">확인</string>
    <string name="text_pass">건너뛰기</string>
    <string name="text_invalid_nickname">특수문자를 사용할 수 없습니다.</string>
    <string name="text_duplicated_nickname">중복된 닉네임입니다.</string>
    <string name="text_invalid_email">이메일 형식이 올바르지 않습니다.</string>
    <string name="text_duplicated_email">이미 가입된 이메일 주소입니다.</string>
    <string name="text_keep_login">닉네임은 수정할 수 없습니다.\n이대로 가입을 진행할까요?</string>
    <string name="text_purchase_benefit_subtitle">*구매 전에는 일부 사진과 글만 공개해요</string>
    <string name="text_purchase_benefit_main_1">장소를 표시한 지도</string>
    <string name="text_purchase_benefit_main_2">일차별 여행 코스</string>
    <string name="text_purchase_benefit_main_3">더 많은 양의 사진과 글</string>
    <string name="text_purchase_benefit_main_4">솔직 후기</string>
    <string name="text_purchase_benefit_main_5">가본 사람만 알 수 있는 꿀팁</string>
    <string name="text_purchase_benefit_main_6">다음 장소로 이동할 때의 교통편</string>
    <string name="text_purchase_benefit_sub_1">여행 일정에 포함된 모든 장소가 지도에 다 있어요</string>
    <string name="text_purchase_benefit_sub_2">일차별 일정을 한눈에 살펴보세요</string>
    <string name="text_purchase_benefit_sub_3">구매 후 더 풍부한 사진과 정보를 만나보세요</string>
    <string name="text_purchase_benefit_sub_4">여행 플레이스의 장점과 단점을 알아보세요</string>
    <string name="text_purchase_benefit_sub_5">검색으로 쉽게 안 나오는 팁들을 챙겨가세요</string>
    <string name="text_purchase_benefit_sub_6">어떻게 이동했고, 몇 분이 걸렸는지 확인해보세요</string>
    <string name="text_purchase_example"><u>구매한 여행 일정 예시</u></string>
    <string name="term_url">https://boggy-snowstorm-fdb.notion.site/a69b7abcdb9f42399825f4ff25343bfd</string>
    <string name="price_format">%,2d</string>
    <string name="text_sign_up_terms_title">이용약관 동의가 필요해요.</string>
    <string name="text_home_main">구매 많은 여행 일정</string>
    <string name="text_minute">%d분</string>
</resources>