<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_f4f5f7"
    tools:context=".ui.onboarding.OnboardingFragment2">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/onboarding_check_preview"
        android:textColor="@color/grey_313740"
        android:textSize="18sp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/onboarding2"
        app:layout_constraintBottom_toTopOf="@+id/iv_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <ImageView
        android:id="@+id/iv_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="44dp"
        android:src="@drawable/ic_dots_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_pass" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:includeFontPadding="false"
        android:paddingHorizontal="22dp"
        android:paddingTop="13dp"
        android:paddingBottom="17dp"
        android:text="@string/text_pass"
        android:textColor="@color/grey_919bab"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/spoqa_han_sans_neo_bold"
        android:includeFontPadding="false"
        android:paddingHorizontal="36dp"
        android:paddingTop="13dp"
        android:paddingBottom="17dp"
        android:text="@string/text_next"
        android:textColor="@color/blue_0077b0"
        android:textSize="16sp"
        android:onClick="@{()->handlers.next()}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>